[Feature] fixed column horizontal scroll

--- a/src/styles/components/_fixedHeader.scss
+++ b/src/styles/components/_fixedHeader.scss
@@ -1,1 +1,9 @@
 @import './../variables.scss';
+.fixed-header-container {
+  position: fixed;
+  top: 0;
+  z-index: 500;
+  .table-cell-hidden {
+    display: none;
+  }
+}
